Fixes recall-map on mobile

--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -618,7 +618,8 @@ section{
         top:15%;
         height:85%;
     }
-    #newsfeed{
+    #newsfeed, #drug-detail{
+        display:none;
         top:15%;
         width:100%;
         left:0;
